@@ -94,6 +94,7 @@ current objectives:
 
 - display correct permissions on ls
 
+- option to disable timestamps in log
 - recursive directory listing (LIST -R)
 - rewrite fct do_mkdir
 - SFV: trap EVENT_DELETE, and re-create .missing if file from sfv is deleted ?? (not sure it is a good idea ...)
