@@ -1,3 +1,7 @@
+2005-10-20  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* feature: add timestamps to log entries
+
 2005-10-19  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* feature: modules support in new config format
